# scienceQA-chatbot

./: .env_example  .gitignore  README.md  chat.py  dataset_functions.py  getWrongIndexes.py  llama_cpp_test.py  llamacpp_test.ipynb  prompts.py  pyproject.toml  query_server.py  results.json  results_100.json  results_full.json  results_graph.py  results_graph_google.py  test.py  test_4o_mini_wrongs_only.py  test_4o_wrongs_only.py  test_google_wrongs_only.py
figures/: Probabilities.md
results/: results_03-27-11-08.json  results_03-27-11-09.json  results_03-27-11-12.json  results_03-27-11-14.json  results_03-27-11-15.json  results_03-27-11-17.json  results_03-27-11-18.json  results_04-04-23-56.json  results_04-04-23-58.json  results_04-05-00-46.json  results_4o_wrong.json  results_gemini_2_flash.json  results_gemini_2_flash_lite.json
